# TTB-Label-Verification-App

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml  live-check.yml
app/: comparison.py  main.py  models.py  vision.py
frontend/: app.js  index.html  styles.css
scripts/: live_checklist.py  run_vision_sample.py
tests/: test_comparison.py  test_frontend_submit.py  test_health.py  test_live_checklist.py  test_verify_endpoint.py  test_vision.py
