[project]
name = "ttb-label-verification-app"
version = "0.1.0"
description = "Proof-of-concept TTB label verification app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2.0.0",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.10.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-playwright>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
